syntax = "proto3";

package org.slaq.slaqworx.panoptes.proto;

option optimize_for = LITE_RUNTIME;

message IdVersionKeyMsg {
    string id = 1;
    int64 version = 2;
}

message IdKeyMsg {
    string id = 1;
}

message PortfolioMsg {
    IdVersionKeyMsg key = 1;
    string name = 2;
    IdVersionKeyMsg benchmarkKey = 3;
    repeated IdKeyMsg ruleKeys = 4;
    repeated IdKeyMsg positionKeys = 5;
}

message PositionMsg {
    IdKeyMsg key = 1;
    double amount = 2;
    IdKeyMsg securityKey = 3;
}

message RuleMsg {
    IdKeyMsg key = 1;
    string description = 2;
    string type = 3;
    string configuration = 4;
    string filter = 5;
    string classifierType = 6;
    string classifierConfiguration = 7;
}

message SecurityMsg {
    map<string, string> attributes = 1;
}
